--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ index to wiki-ready list/xxxxx.txt
 split list into columns/index-listified.txt
 
 split list into columns/index-wikified.txt
+
+index to wiki-ready list/index-wikified2.txt
+
+index to wiki-ready list/index-wikified3.txt
